docs: Update event system and tool discovery documentation to reflect changes in event types and metadata collection

--- a/development/satellite/architecture.mdx
+++ b/development/satellite/architecture.mdx
@@ -450,7 +450,7 @@ The satellite service has completed **Phase 1: MCP Transport Implementation** an
 - **Command Processing**: HTTP MCP server management (spawn/kill/restart/health_check)
 - **Heartbeat Service**: Process status reporting and system metrics
 - **Configuration Sync**: Real-time MCP server configuration updates
-- **Event System**: Real-time event emission with automatic batching (10 event types)
+- **Event System**: Real-time event emission with automatic batching (13 event types including tool metadata)
 
 **Foundation Infrastructure:**
 - **HTTP Server**: Fastify with Swagger documentation
