--- a/development/satellite/tool-discovery.mdx
+++ b/development/satellite/tool-discovery.mdx
@@ -231,6 +231,58 @@ stdio tools persist in cache for optimal performance:
 **Idle Process Management**: stdio processes that remain inactive for the configured idle timeout (default: 3 minutes) are automatically terminated to save memory. However, **tools remain cached** so when a client requests them, the process respawns instantly without needing to rediscover tools. This reduces respawn time from 1-3 seconds to 1-2 seconds. See [Idle Process Management](/development/satellite/idle-process-management) for details.
 </Info>
 
+## Tool Metadata Collection
+
+After tool discovery completes, the satellite emits tool metadata to the backend for storage and analysis.
+
+### Event Emission (Post-Discovery)
+
+Following successful tool discovery (both HTTP/SSE and stdio), the satellite:
+
+1. **Calculates token consumption** using the `token-counter.ts` utility
+2. **Builds event payload** with tool metadata including per-tool token counts
+3. **Emits `mcp.tools.discovered` event** to backend via EventBus
+4. **Backend stores metadata** in `mcpToolMetadata` table for team visibility
+
+**Event Payload Structure:**
+```typescript
+{
+  installation_id: string;
+  installation_name: string;
+  team_id: string;
+  server_slug: string;
+  tool_count: number;           // Total tools discovered
+  total_tokens: number;         // Sum of all tool token counts
+  tools: Array<{
+    tool_name: string;
+    description: string;
+    input_schema: Record<string, unknown>;
+    token_count: number;        // Tokens for this specific tool
+  }>;
+  discovered_at: string;        // ISO 8601 timestamp
+}
+```
+
+**Integration Points:**
+- `StdioToolDiscoveryManager`: Emits after stdio tool discovery completes
+- `RemoteToolDiscoveryManager`: Emits after HTTP/SSE tool discovery completes
+- `EventBus`: Batches events every 3 seconds for efficient transmission
+- Backend handler: Stores tools with delete-then-insert strategy
+
+**Token Calculation:**
+The satellite uses `estimateMcpServerTokens()` from `token-counter.ts` to calculate:
+- Per-tool tokens: `name` + `description` + `JSON.stringify(inputSchema)`
+- Total server tokens: Sum of all tool tokens
+- Uses `gpt-tokenizer` library (provider-agnostic)
+
+**Purpose:**
+- Store tool metadata in backend database for team visibility
+- Calculate hierarchical router token savings (traditional vs 2-meta-tool approach)
+- Enable frontend tool catalog display with token consumption metrics
+- Provide analytics on MCP server complexity and context window usage
+
+See [Event System](/development/satellite/event-system) for event batching and delivery details.
+
 ## Development Considerations
 
 ### Debugging Support
