docs: Update token consumption metrics in hierarchical router documentation for accuracy

--- a/development/satellite/hierarchical-router.mdx
+++ b/development/satellite/hierarchical-router.mdx
@@ -80,9 +80,9 @@ Instead of exposing all tools directly, the satellite exposes only 2 meta-tools:
 - 37.5% of 200k context consumed
 
 **After (Hierarchical):**
-- 2 meta-tools × 175 tokens = 350 tokens
-- 0.175% of 200k context consumed
-- **99.5% reduction**
+- 2 tools × 686 tokens = 1372 tokens consumed
+- Result: 0.686% of context window used
+- **Token Reduction: 98.3%**
 
 ## Meta-Tool Specifications
 
